@@ -1,22 +1,22 @@
 # >> BASICS <<
 
 #
-# c3p0 depends on the mchange-commons library, with
+# c3p0 depends on the mchange-commons-java library, with
 # which it is distributed. you must set the directory
 # in which that library's jar and sources-jar files can
 # be found
 #
-mchange-commons.dist.dir=lib
+mchange-commons-java.dist.dir=lib
 
 #
 # the version and jar file name against which the present distribution
 # is intended to be built are shown below. usually you should leave 
 # these alone.
 #
-mchange-commons.version=0.2.2
-mchange-commons.jar.file.name=mchange-commons-java-${mchange-commons.version}.jar
-mchange-commons.jar.file=${mchange-commons.dist.dir}/${mchange-commons.jar.file.name}
-mchange-commons.sources.jar.file=${mchange-commons.dist.dir}/mchange-commons-java-${mchange-commons.version}-sources.jar
+mchange-commons-java.version=0.2.2
+mchange-commons-java.jar.file.name=mchange-commons-java-${mchange-commons-java.version}.jar
+mchange-commons-java.jar.file=${mchange-commons-java.dist.dir}/${mchange-commons-java.jar.file.name}
+mchange-commons-java.sources.jar.file=${mchange-commons-java.dist.dir}/mchange-commons-java-${mchange-commons-java.version}-sources.jar
 
 #
 # You'll need to supply at least one of j2ee.classpath
